--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:25.3.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    compile 'com.google.android.gms:play-services-places:11.0.4'
 }
