--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     compile 'com.google.android.gms:play-services-places:11.0.4'
+    compile 'com.android.support:cardview-v7:25.3.1'
 }
