bug fix - delet unnesesary classes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value=""/>
+            android:value="${PlaceAPIKey}"/>
 
         <activity android:name=".AMainActivity">
             <intent-filter>
