--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:25.4.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-    compile 'com.google.android.gms:play-services-places:11.4.2'
+    compile 'com.google.android.gms:play-services-places:11.6.0'
+    compile 'com.google.android.gms:play-services-location:11.6.0'
     compile 'com.android.support:cardview-v7:25.4.0'
 }
