--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
         applicationId "dev.eyesless.simple_weather_for_fishermans"
         minSdkVersion 21
         targetSdkVersion 26
+        multiDexEnabled false
         versionCode 1
         versionName '0.1'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
