--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-    implementation 'com.google.android.gms:play-services-places:11.6.0'
-    implementation 'com.google.android.gms:play-services-location:11.6.0'
+    implementation 'com.google.android.libraries.places:places:1.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
 }
